Add popular articles.

--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -5,6 +5,7 @@ import outreachIcon from "../assets/icons/outreach.svg";
 import Background from "../components/Background.astro";
 import MainPage from "../components/MainPage.astro";
 import PageSubtitle from "../components/PageSubtitle.astro";
+import PopularArticle from "../components/pubs/PopularArticle.astro";
 ---
 
 <Layout title="Outreach">
@@ -12,12 +13,85 @@ import PageSubtitle from "../components/PageSubtitle.astro";
     <Background backgroundImage={outreachIcon} />
     <PageTitle title="Outreach">
       <p class="dark:text-slate-400 text-slate-500">
-        I am passionate about sharing my research and experiences with the
-        public. I have been involved in various outreach activities, from school
-        visits to public talks. I am also active in science communication
-        through social media and blogging.
+        Engaging with the public through various outreach activities is a key
+        part of my work. From interviews and writing popular articles to
+        in-person outreach events, I strive to make science accessible and
+        interesting.
       </p>
     </PageTitle>
     <PageSubtitle subtitle="Interviews" />
+    <PopularArticle
+      publisher="Science Next"
+      title="What Could Recovery Look Like for Blazing Australia?"
+      dateVolume="27 January 2020"
+      pdfUrl="https://hhandika.com/dl/interview-lsuscience.pdf"
+    />
+    <PopularArticle
+      publisher="The Indonesian Ministry of Finance Magazine, Media Keuangan"
+      title="Berniat Terus Meneliti Tikus"
+      dateVolume="Volume XII / NO. 118 / July 2017"
+      pdfUrl="https://mediakeuangan.kemenkeu.go.id/document/download/media-keuangan-edisi-juli-2017"
+    />
+    <PopularArticle
+      publisher="Kompas.Com-ABC Australia Plus"
+      title="Kisah Mahasiswa Indonesia Terlibat Penemuan Tikus Hidung Babi"
+      dateVolume="26 November 2015"
+      url="https://sains.kompas.com/read/2015/10/26/18070041/Kisah.Mahasiswa.Indonesia.Terlibat.Penemuan.Tikus.Hidung.Babi?page=all"
+      pdfUrl="https://hhandika.com/dl/interview-tikus-hidung-babi-kompas.pdf"
+    />
+    <PageSubtitle subtitle="Popular Articles" />
+    <PopularArticle
+      publisher="Republika-ABC AustraliaPlus"
+      title="Hal yang Perlu Dilakukan agar Kuliah S2 di Luar Negeri"
+      dateVolume="16 February 2017"
+      pdfUrl="https://hhandika.com/dl/republika-kuliah-s2-LN.pdf"
+    />
+    <PopularArticle
+      publisher="DetikNews-ABC AustraliaPlus"
+      title="Langkah-Langkah Kuliah ke Luar Negeri: Dari A-Z"
+      dateVolume="7 June 2016"
+      url="https://news.detik.com/abc-australia/d-3227170/langkah-langkah-kuliah-ke-luar-negeri-dari-a-z"
+      pdfUrl="https://hhandika.com/dl/detik-langkah-langkah-kuliah-LN.pdf"
+    />
+    <PopularArticle
+      publisher="Republika-ABC AustraliaPlus"
+      title="Menentukan Topik Penelitian: Dilema Kecepatan Tamat dan Kualitas Penelitian"
+      dateVolume="10 May 2016"
+      url="https://internasional.republika.co.id/berita/internasional/abc-australia-network/o6xrf3/menentukan-topik-penelitian-dilema-kecepatan-tamat-dan-kualitas-penelitian"
+      pdfUrl="https://hhandika.com/dl/detik-langkah-langkah-kuliah-LN.pdf"
+    />
+    <PopularArticle
+      publisher="TribunNews-ABC AustraliaPlus"
+      title="Pengalaman Heru Handika Menyikapi Kerja Sama dengan Peneliti Asing"
+      dateVolume="8 May 2016"
+      url="https://www.tribunnews.com/australia-plus/2017/05/08/pengalaman-heru-handika-menyikapi-kerja-sama-dengan-peneliti-asing?page=all"
+      pdfUrl="https://hhandika.com/dl/tribun-kerjasama-penelitian.pdf"
+    />
+    <PopularArticle
+      publisher="DetikNews-ABC AustraliaPlus"
+      title="Jurus Kuliah ke Luar Negeri Berkat Jaringan Pertemanan"
+      dateVolume="15 April 2016"
+      url="https://news.detik.com/abc-australia/d-3189123/jurus-kuliah-ke-luar-negeri-berkat-jaringan-pertemanan"
+      pdfUrl="https://hhandika.com/dl/detik-kuliah-ln-lewat-pertemanan.pdf"
+    />
+    <PopularArticle
+      publisher="Republika-ABC AustraliaPlus"
+      title="Kiat Meningkatkan TOEFL Melebihi 550"
+      dateVolume="7 March 2016"
+      pdfUrl="https://hhandika.com/dl/republika-toefl550.pdf"
+    />
+    <PopularArticle
+      publisher="DetikNews-ABC AustraliaPlus"
+      title="Mengenal LoA dan Cara Mendapatkan 'Surat Sakti' S2/S3 di Luar Negeri"
+      dateVolume="3 February 2016"
+      url="https://news.detik.com/abc-australia/d-3133938/mengenal-loa-dan-cara-mendapatkan-surat-sakti-s2s3-di-luar-negeri"
+      pdfUrl="https://hhandika.com/dl/detik-mengenal-loa.pdf"
+    />
+    <PopularArticle
+      publisher="Republika-ABC AustraliaPlus"
+      title="Bagaimana Menulis Esai Untuk Mendapatkan Beasiswa LPDP"
+      dateVolume="11 January 2016"
+      pdfUrl="https://hhandika.com/dl/republika-menulis-essay.pdf"
+    />
   </MainPage>
 </Layout>
