Add all outreach data.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,11 @@ const titleClasses = cntl`
   text-5xl
   text-chetwode-950
   dark:text-chetwode-50
-  py-4
+  mt-2
 `;
 
 const heroTextClasses = cntl`
-  mt-2
+  mt-4
   text-pretty
   text-lg
   font-medium
@@ -58,6 +58,9 @@ const statsGridClasses = cntl`
       <h1 class={titleClasses}>
         Hi, I'm <strong>Heru Handika</strong>
       </h1>
+      <p class="text-slate-400">
+        PhD Candidate · Louisiana State University, USA
+      </p>
       <p class={heroTextClasses}>
         I study small mammal diversity and speciation on islands and develop
         software to improve data integration and management, promote
