--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -9,13 +9,8 @@ import MainPage from "../components/MainPage.astro";
 <Layout title="Software">
   <MainPage>
     <Background backgroundImage={codingIcon} />
-    <PageTitle title="Software">
-      <p class="dark:text-slate-400 text-slate-500">
-        I am passionate about developing software tools that help researchers
-        analyze and visualize their data. I have developed several software
-        packages for phylogenomic analysis, data manipulation, and
-        visualization. Below are some of the software tools I have developed.
-      </p>
+    <PageTitle title="Software Development">
+      <p class="dark:text-slate-400 text-slate-500">Coming soon!</p>
     </PageTitle>
   </MainPage>
 </Layout>
