--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ const statsGridClasses = cntl`
 <Layout title="Island small mammals and inclusive biodiversity software">
   <MainPage>
     <Background backgroundImage={rodentSvg} />
-    <div class="text-center item-center">
+    <div class="text-center item-center mt-16">
       <img
         class="block mx-auto h-32 lg:h-48 rounded-full sm:mx-auto"
         src={profilePhoto.src}
