--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,8 +21,8 @@ import PageDescription from "../components/PageDescription.astro";
         research integrates fieldwork, museum collections, and the development
         of genomic tools to address questions about speciation, biogeography,
         and conservation. I work towards making biodiversity research involving
-        genomic data accessible to students and researchers in countries with
-        limited computing resources.
+        genomic data accessible to students and researchers with limited access
+        to computing resources.
       </PageDescription>
     </PageTitle>
     <div class="my-8">
