--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -23,14 +23,15 @@ const cardDescriptonClasses = cntl`
     <PageTitle title="Software Development">
       <PageDescription>
         I believe high-quality software is essential not only for
-        reproducibility and advancing science but also for making science more
-        inclusive. My software development projects primarily focus on
-        developing tools to improve data collection and management in the field,
-        as well as simplifying data integration and analysis. All of this
-        software is developed with accessibility and ease of use in mind.
+        reproducibility and advancing science but also for fostering inclusivity
+        within the scientific community. I primarily develop tools to improve
+        data collection, management, and integration in field-based evolutionary
+        studies, as well as to minimize the technical complexities of genomic
+        analysis. All of my software is developed with a focus on accessibility
+        and ease of use, and comes with beginner-friendly documentation.
         Whenever possible, I ensure cross-platform compatibility, including
         support for Windows and mobile operating systems, which are often
-        overlooked in the scientific community.
+        overlooked in evolutionary studies.
       </PageDescription>
     </PageTitle>
     <PageSubtitle subtitle="Software Projects" />
@@ -56,14 +57,17 @@ const cardDescriptonClasses = cntl`
           subtitle="A cross-platform field catalog for natural history collections"
         >
           <p class={cardDescriptonClasses}>
-            The NAHPU field catalog is a mobile and desktop application to
-            streamline data collection in the field that I developed in
-            collaboration with field biologists at institutions in the United
-            States, Mexico, Hong kong, and Indonesia . The app is designed to
-            work offline and is optimized for low-end devices. The app is
-            currently being used by several field teams in Indonesia and the
-            USA. It supports ornithology and mammalogy data collection and is
-            planned to support other taxa.
+            The NAHPU field catalog is a mobile and desktop application designed
+            to streamline data collection in the field, foster international
+            collaboration, and support responsible and reproducible
+            collection-based evolutionary studies. I develop the app in
+            collaboration with field biologists from institutions in the United
+            States, Mexico, Hong Kong, and Indonesia. It is optimized for
+            offline use and low-end devices. The app is currently in beta and
+            has been tested by several field teams for fieldwork in Indonesia,
+            Brazil, Colombia, Mexico, and the United States. It supports data
+            collection for ornithology and mammalogy, with plans to extend
+            support to other taxa.
           </p>
         </Card>
       </CardLayout>
@@ -75,10 +79,13 @@ const cardDescriptonClasses = cntl`
           subtitle="An Ultrafast, scaLable, Accessible, and Reproducible pipeline for phylogenomics"
         >
           <p class={cardDescriptonClasses}>
-            My goal with ULLAR is to develop a lightweight and scalable pipeline
-            that requires minimal learning. In addition to Linux and macOS, the
-            typical supported operating systems for bioinformatics, ULLAR will
-            run natively on Windows whenever possible.
+            ULLAR is currently in its early development stage. The goal of ULLAR
+            is to create a lightweight and scalable pipeline that requires
+            minimal learning. It aims to reduce runtime dependencies, minimize
+            RAM usage, and provide optimal performance with minimal effort from
+            users. In addition to Linux and macOS, which are typically supported
+            operating systems for bioinformatics, ULLAR will also run natively
+            on Windows whenever possible.
           </p>
         </Card>
       </CardLayout>
