--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -63,7 +63,7 @@ const cardDescriptonClasses = cntl`
           This course covers several topics, including Mendelian inheritance,
           gene mapping, population genetics, and genomics. I taught recitation
           sections and assisted with homework, exam preparation, and grading. My
-          class size is around 60 students divided into two sections.
+          class size was about 60 students divided into two sections.
         </p>
       </Card>
       <Card
@@ -84,7 +84,8 @@ const cardDescriptonClasses = cntl`
         <p class={cardDescriptonClasses}>
           This course is an introduction to the principles of biology that
           covers topics on ecology, evolution, and diversity. I taught lab
-          section and assisted with grading. My class size was 60 students.
+          section and assisted with grading. My class size was about 60
+          students.
         </p>
       </Card>
     </CardLayout>
@@ -101,7 +102,7 @@ const cardDescriptonClasses = cntl`
             that covers topics on basic computational statistics, geographic
             information system (GIS), and scientific photography. I developed
             the syllabus, taught lectures, and graded assignments. My class size
-            was 70 students.
+            was about 70 students.
           </p>
         </Card>
       </CardLayout>
