--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -102,7 +102,7 @@ const cardDescriptonClasses = cntl`
             that covers topics on basic computational statistics, geographic
             information system (GIS), and scientific photography. I developed
             the syllabus, taught lectures, and graded assignments. My class size
-            was about 70 students.
+            was 70 students.
           </p>
         </Card>
       </CardLayout>
