--- a/src/components/pubs/Forthcoming.astro
+++ b/src/components/pubs/Forthcoming.astro
@@ -1,5 +1,5 @@
 ---
-import PubButton from "../../layouts/PubButton.astro";
+import WrapButton from "../../layouts/WrapButton.astro";
 import DownloadButton from "../buttons/DownloadButton.astro";
 
 interface JournalArticle {
@@ -32,7 +32,7 @@ const { author, year, title, journal, url, pdf } =
         ))
     }. {year}. {title}. <em>{journal}</em>.
   </p>
-  <PubButton>
+  <WrapButton>
     <DownloadButton text="View Preprint" url={url} />
     {
       pdf && (
@@ -44,5 +44,5 @@ const { author, year, title, journal, url, pdf } =
         />
       )
     }
-  </PubButton>
+  </WrapButton>
 </div>
