--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -84,6 +84,7 @@ import Background from "../components/Background.astro";
           pdfUrl="https://bioone.org/journalArticle/Download?urlId=10.1206%2F0003-0090.454.1.1"
         />
         <Published
+          id="handika2021"
           author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
           year={2021}
           title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
